# lz-manager-service

./: .gitignore  README.md  pyproject.toml
src/: alembic.ini
src/application/: __init__.py  main.py
src/application/controllers/: address_controller.py  elastic_controller.py  lz_controller.py
src/application/dtos/: address_dto.py
src/application/enums/: address_status.py  building_type.py  elastic_indexes.py  lz_types_enum.py
src/application/handlers/: address_handler.py  address_index_handler.py
src/application/indexes/: __init__.py  address_index.py
src/application/models/: __init__.py  address_model.py  base.py  building_model.py  lz_model.py
src/application/schemas/request_schemas/: new_zone_schema.py
src/application/schemas/response_schemas/: default_response_schema.py
src/migrations/: env.py
src/migrations/versions/: 2025_06_03_0018-021510330a95_init_db.py  2025_06_09_0113-f354fd5a1433_fixed_relationshit_1_to_many.py  2025_06_09_0118-e9ca409696bb_fixed_relationshit_1_to_many_2.py  2025_06_09_0140-d3da035b5c32_relationship_fixes.py  2025_06_09_0201-1af329e1ba61_name_relationship_fixes.py  2025_06_16_2323-873ad83450bf_address_status.py  2025_06_16_2336-f8cf7aebfe86_sync_db.py
